--- a/wp-content/themes/mm-child/assets/css/mms.css
+++ b/wp-content/themes/mm-child/assets/css/mms.css
@@ -6,11 +6,27 @@
     transition: transform 0.3s ease-in-out;
     overflow: hidden;
     column-gap: 28px;
+    text-align: center;
+}
+#mms_search_cate_silde .category {
+    width: max-content;
+    text-transform: capitalize;
+    cursor: pointer;
+    color: #717171;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
 }
 #mms_search_cate_silde .category h3{
     font-size: 16px;
     font-weight: 400;
-    display: ruby-text;
+    line-height: 22px;
+    white-space: nowrap;
+    color: #000;
 }
 #mms_search_cate_silde .category img {
     height:35px;
@@ -25,7 +41,7 @@
     margin: auto;
     display: grid;
     align-items: center;    
-    justify-content: center;
+    justify-content: center;   
 }
 #top .search_dates input[type="text"] ,
 .search_dates input[type="text"] {
@@ -80,7 +96,129 @@
     cursor: not-allowed;
     opacity: 1;
 }
-
+#mms_search_results{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 34px 17px;
+    vertical-align: baseline;
+    margin: 0 0 14px;
+    padding: 0;
+}
+#mms_search_results .product-result{ 
+    width: 100%;
+    border: 1px solid #D7D7D7;
+    margin: 0;
+    list-style-type: none;
+    padding: 0;
+    position: relative;
+    text-indent: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    padding-bottom: 15px;
+    border-radius: 8px;
+}
+#mms_search_results .product-result .mmsp_result_wrapper{ 
+    position: relative;
+    overflow: hidden;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #000;
+    text-decoration: none;
+}
+#mms_search_results .product-result .mmsp_result_wrapper:hover img{
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+#mms_search_results .product-result .mmsp_title {
+    padding: 10px 15px 0;
+    font-weight: 600;
+    color: #000;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+#mms_search_results .product-result .mmsp_piclup_dura {
+    padding: 10px 15px 0;
+    flex-grow: 10;
+    display: flex;
+    flex-flow: column nowrap;   
+}
+#mms_search_results .product-result .mmsp_piclup_dura div::before {
+    content: '';
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #000;
+    margin-right: 5px;
+    transform: translateY(-3px);
+}
+#mms_search_results .product-result .mmsp_image{
+    overflow: hidden;
+}
+#mms_search_results .product-result .mmsp_image img{
+    margin: 0;
+    display: block;
+    width: 100%;
+    height: 217px;
+    object-fit: cover;
+    overflow: hidden;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+}
+#mms_search_results .product-result .mmsp_price_rating {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 15px 10px;
+}
+#mms_search_results .product-result .mmsp_price_rating .dashicons{
+    color: #ff9903;
+    vertical-align: text-bottom;
+    font-size: 16px;
+}
+#mms_search_results .product-result .mmsp_pickup ,
+#mms_search_results .product-result .mmsp_duration {
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 400;
+    text-transform: capitalize;
+}
+#mms_search_results .product-result .mmsp_price {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    color: #2189C1;
+    font-size: 28px;
+    letter-spacing: 0;
+    font-weight: 600;
+    line-height: 42px;
+    text-shadow: rgb(0 0 0 / 10%) 0 1px 1px;
+}
+#mms_search_results .product-result .mmsp_price span{
+    line-height: 1;
+    font-size: 14px;
+    color: #545454;
+    font-weight: 600;
+}
+#mms_search_results .product-result .mmsp_cate_pimary {
+    position: absolute;
+    background-color: #fff;
+    border-radius: 30px;
+    padding: 3px 10px;
+    top: 10px;
+    left: 10px;
+    color: #000;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 600;
+    z-index: 9;
+}
 #mms_datepicker_widget {
     position: absolute;
     top: calc(100% + 15px);
